--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Logan's Streetwear Pres </title>
 
 		<!-- Core library. Do not remove -->
 		<link rel="stylesheet" href="css/reveal.css">
@@ -27,7 +27,7 @@
 				<section data-background="red">
 					<h1 class="logan">Supreme</h1>
 					<p>The Hype</p>
-					<img src="http://images.complex.com/complex/image/upload/supreme-fall-winter-7_uikcol.jpg">
+					<img src="http://pbs.twimg.com/media/CJ2HxrZWoAA1EQs.jpg">
 				</section>
 
 				<section>
